<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="backPressed"
        android:id="@+id/btnBack"
        android:layout_below="@+id/txtInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_friends"
        android:id="@+id/btnAdd"
        android:onClick="addToFriendsPressed"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/txtInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_username"
        android:ems="10"
        android:id="@+id/txtInput"
        android:nestedScrollingEnabled="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/invalid_name_or_pass"
        android:id="@+id/txtStatus"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtInput"
        android:layout_marginTop="10dp"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_friend"
        android:id="@+id/btnDelete"
        android:onClick="deleteFriendPressed"
        android:layout_alignTop="@+id/btnAdd"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"/>
</RelativeLayout>