<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/Main">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/name_field"
        android:width="250dp"
        android:hint="@string/item_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/registerButton"
        android:width="120dp"
        android:clickable="true"
        android:onClick="registerPressed"
        android:layout_alignTop="@+id/backButton"
        android:layout_alignRight="@+id/item_price_field"
        android:layout_alignEnd="@+id/item_price_field" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/backButton"
        android:width="120dp"
        android:onClick="backPressed"
        android:layout_marginBottom="73dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/item_price_field"
        android:layout_alignStart="@+id/item_price_field" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:width="250dp"
        android:id="@+id/item_price_field"
        android:hint="@string/max_price"
        android:layout_below="@+id/name_field"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/empty"
        android:id="@+id/message"
        android:textColor="#FF0000"
        android:visibility="invisible"
        android:layout_marginTop="40dp"
        android:layout_below="@id/item_price_field"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp"
        android:text="@string/dollar_sign"
        android:layout_toLeftOf="@id/item_price_field"
        android:layout_alignTop="@id/item_price_field"
        android:layout_toStartOf="@id/item_price_field"
        />

</RelativeLayout>