<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#838383">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/txtName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/txtEmail"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtName"
        android:layout_marginTop="40dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rating"
        android:id="@+id/txtRating"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtEmail"
        android:layout_marginTop="40dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sales_reported"
        android:id="@+id/txtSalesReported"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtRating"
        android:layout_marginTop="40dp"
        android:textSize="30sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/btnBack"
        android:onClick="backPressed"
        android:layout_below="@+id/txtSalesReported"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingSpinner"
        android:layout_alignTop="@+id/txtRating"
        android:layout_toRightOf="@+id/txtRating"
        android:layout_toEndOf="@+id/txtRating"
        android:layout_marginLeft="-20dp"
        />

</RelativeLayout>