<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/Main"
    android:background="#838383">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/shopping"
        android:id="@+id/textView"
        android:singleLine="false"
        android:textColor="#ff9fff80"
        android:textSize="60sp"
        android:textAlignment="center"
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:height="90dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button"
        android:clickable="true"
        android:onClick="loginPressed"
        android:singleLine="true"
        android:textColor="#ff000000"
        android:layout_marginTop="143dp"
        android:width="250dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/button2"
        android:clickable="true"
        android:onClick="registerPressed"
        android:singleLine="true"
        android:textColor="#ff000000"
        android:layout_marginTop="20dp"
        android:width="250dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/with"
        android:id="@+id/textView2"
        android:singleLine="false"
        android:textColor="#ff9fff80"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/friends"
        android:id="@+id/textView3"
        android:singleLine="false"
        android:textColor="#ff9fff80"
        android:textSize="60sp"
        android:textAlignment="center"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
